Can gen rectangles now
Have changed the way that the map and grid are gen'd to accept x and y dimensions and to default to screensize.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="main-content">
 
     <div class="canvas-container">
-    <canvas id="imageCanvas" class="canvas"></canvas>
+    <canvas id="imageCanvas" class="canvas" style="display: none;" ></canvas>
     <canvas id="gridCanvas" class="canvas"></canvas>
     <canvas id="paintCanvas" class="canvas"></canvas>
 
