--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button class = button id="saveButton">[S]ave</button>
     <button class = button id="loadButton">[L]oad</button>
     <button class = button id="paintButton">[P]aint</button>
+    <button class = button id="fillButton">[F]ill</button>
     </div>
 
 </header>
@@ -44,7 +45,7 @@
 
 </div>
 
-                      
+                     
 
 <div class="color-palette" id = "painter" style="display: none;">  
         <div class="color" data-color="#ffffff" style="background-color: white;"></div>
