Added expand map
A new button [A]dd increases the size of the map by one row on all sides.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </div>
 
     <div class = toolbar id="toolbar">
+    <button class = button id="addButton">[A]dd</button>
     <button class = button id="newButton">[N]ew</button>
     <button class = button id="saveButton">[S]ave</button>
     <button class = button id="loadButton">[L]oad</button>
