Canvas is now draggable
Allowing access to all parts of the map the canvas is now draggable.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <div class="main-content">
 
     <div class="canvas-container">
-    <canvas id="imageCanvas" class="canvas" style="display: none;" ></canvas>
-    <canvas id="gridCanvas" class="canvas"></canvas>
+  
+    <canvas id="gridCanvas"  class="canvas"></canvas>
     <canvas id="paintCanvas" class="canvas"></canvas>
 
     </div>
@@ -87,11 +87,14 @@
     <p>&copy; 2023 Excel_DM</p>
     </footer>
 
+    <script src="dragCanvas.js"></script>
+
     <script type="module" src="Grid.js"></script>
     <script type="module" src="Toolbar.js"></script>
     <script type="module" src="State.js"></script>
     <script type="module" src="Paint.js"></script> 
     <script type="module" src="Boop.js"></script> 
+    
 
     
     <audio id="clickSound" src="click_sound.mp3" preload="auto"></audio>
