--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button class = button id="newButton">[N]ew</button>
     <button class = button id="saveButton">[S]ave</button>
     <button class = button id="loadButton">[L]oad</button>
+    <button class = button id="moveButton">[M]ove</button>
     <button class = button id="paintButton">[P]aint</button>
     <button class = button id="fillButton">[F]ill</button>
     </div>
