--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <input id="form-y" name="y" type="hidden" value="0">                                     
     <input id="form-name" name="name" type="hidden" value="">                    
     <input id="form-fill" name="fill" type="hidden" value="">
+    <input id="form-image" name="fill" type="hidden" value="">
     <button type="submit">Save</button>
 
 </form> 
